--- a/TBA/BONHistoryStoryboard.storyboard
+++ b/TBA/BONHistoryStoryboard.storyboard
@@ -44,29 +44,37 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZtN-Ro-wLL" id="X3u-2c-s36">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7cn-Zr-dHn">
-                                                    <rect key="frame" x="25" y="8" width="348" height="21"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="how5" translatesAutoresizingMaskIntoConstraints="NO" id="CeF-wD-WrP">
+                                                    <rect key="frame" x="393" y="0.0" width="171" height="99"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of3-Hh-lNz">
+                                                    <rect key="frame" x="28" y="49" width="360" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="how5" translatesAutoresizingMaskIntoConstraints="NO" id="CeF-wD-WrP">
-                                                    <rect key="frame" x="485" y="1" width="79" height="99"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of3-Hh-lNz">
-                                                    <rect key="frame" x="25" y="27" width="270" height="65"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7cn-Zr-dHn">
+                                                    <rect key="frame" x="28" y="8" width="360" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="CeF-wD-WrP" secondAttribute="trailing" constant="28" id="1Dq-Bo-4Lg"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="CeF-wD-WrP" secondAttribute="trailing" multiplier="1.05" id="8rC-Vb-HDa"/>
                                                 <constraint firstItem="CeF-wD-WrP" firstAttribute="height" secondItem="X3u-2c-s36" secondAttribute="height" id="9FQ-Ul-no1"/>
+                                                <constraint firstItem="7cn-Zr-dHn" firstAttribute="leading" secondItem="X3u-2c-s36" secondAttribute="leadingMargin" constant="20" id="KEQ-zD-lA8"/>
+                                                <constraint firstItem="7cn-Zr-dHn" firstAttribute="width" secondItem="X3u-2c-s36" secondAttribute="width" multiplier="0.6" id="LM5-dV-pVa"/>
+                                                <constraint firstAttribute="topMargin" secondItem="7cn-Zr-dHn" secondAttribute="top" id="Ucz-Fp-53X"/>
                                                 <constraint firstItem="CeF-wD-WrP" firstAttribute="centerY" secondItem="X3u-2c-s36" secondAttribute="centerY" id="W75-rv-3jZ"/>
+                                                <constraint firstItem="Of3-Hh-lNz" firstAttribute="top" secondItem="7cn-Zr-dHn" secondAttribute="bottom" constant="20" id="Xz7-yG-ayN"/>
+                                                <constraint firstItem="Of3-Hh-lNz" firstAttribute="leading" secondItem="X3u-2c-s36" secondAttribute="leadingMargin" constant="20" id="bhl-M8-SR9"/>
+                                                <constraint firstItem="Of3-Hh-lNz" firstAttribute="width" secondItem="X3u-2c-s36" secondAttribute="width" multiplier="0.6" id="dpa-jO-DTl"/>
+                                                <constraint firstItem="CeF-wD-WrP" firstAttribute="leading" secondItem="7cn-Zr-dHn" secondAttribute="trailing" constant="5" id="hPw-cV-4B2"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -125,28 +133,34 @@
                                 <rect key="frame" x="0.0" y="72" width="600" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AJz-QY-LTv" id="sbK-x1-Pxh">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BvM-tU-eUI">
-                                            <rect key="frame" x="25" y="8" width="348" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BvM-tU-eUI">
+                                            <rect key="frame" x="18" y="8" width="360" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="how5" translatesAutoresizingMaskIntoConstraints="NO" id="heu-u4-1az">
-                                            <rect key="frame" x="485" y="1" width="79" height="99"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="how5" translatesAutoresizingMaskIntoConstraints="NO" id="heu-u4-1az">
+                                            <rect key="frame" x="513" y="0.0" width="79" height="99"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbR-qg-Bsw">
-                                            <rect key="frame" x="25" y="27" width="270" height="65"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbR-qg-Bsw">
+                                            <rect key="frame" x="18" y="49" width="360" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="heu-u4-1az" secondAttribute="trailing" multiplier="1.05" id="PuA-87-Lj7"/>
+                                        <constraint firstItem="BvM-tU-eUI" firstAttribute="trailing" secondItem="heu-u4-1az" secondAttribute="leading" constant="5" id="6SZ-wh-M6G"/>
+                                        <constraint firstItem="BvM-tU-eUI" firstAttribute="leading" secondItem="sbK-x1-Pxh" secondAttribute="leadingMargin" constant="10" id="AGK-5e-w9C"/>
+                                        <constraint firstItem="xbR-qg-Bsw" firstAttribute="top" secondItem="BvM-tU-eUI" secondAttribute="bottom" constant="10" id="JEu-j8-Ye0"/>
+                                        <constraint firstItem="xbR-qg-Bsw" firstAttribute="leading" secondItem="sbK-x1-Pxh" secondAttribute="leadingMargin" constant="10" id="JVQ-M9-XA5"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="heu-u4-1az" secondAttribute="trailing" id="PuA-87-Lj7"/>
                                         <constraint firstItem="heu-u4-1az" firstAttribute="centerY" secondItem="sbK-x1-Pxh" secondAttribute="centerY" id="XVz-gy-33u"/>
+                                        <constraint firstAttribute="topMargin" secondItem="BvM-tU-eUI" secondAttribute="top" id="jey-Wk-XZF"/>
+                                        <constraint firstItem="xbR-qg-Bsw" firstAttribute="width" secondItem="sbK-x1-Pxh" secondAttribute="width" multiplier="0.6" id="sXM-wE-DMf"/>
                                         <constraint firstItem="heu-u4-1az" firstAttribute="height" secondItem="sbK-x1-Pxh" secondAttribute="height" id="vek-gL-zpx"/>
                                     </constraints>
                                 </tableViewCellContentView>
